core/tests/ui/store/relation_enum_rejected.stderr
error: Relation can only be derived for structs
 --> tests/ui/store/relation_enum_rejected.rs:4:6
  |
4 | enum InvalidRelation {
  |      ^^^^^^^^^^^^^^^
