core/tests/ui/store/relation_enum_rejected.rs
use appdb::Relation;

#[derive(Relation)]
enum InvalidRelation {
    Follows,
}

fn main() {}
